add a scroll animation

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   </head>
 
   <body>
+    <div id="cursor"></div>
+    <div class="animate-box"></div>
     <div class="test">
       <div class="D1"></div>
       <div class="D2"></div>
