add project section

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Click!</title>
+    <link rel="shortcut icon" type="image/png" href="img/logo1.png" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
 
@@ -18,7 +19,7 @@
       <div class="D1"></div>
       <div class="D2"></div>
     </div>
-
+    <!--------------------------------------- start navbar  -------------------------------------->
     <header>
       <div class="container">
         <nav class="nav">
@@ -37,6 +38,10 @@
         </nav>
       </div>
     </header>
+
+    <!--------------------------------------- end navbar -------------------------------------->
+
+    <!--------------------------------------- start header  -------------------------------------->
 
     <section class="banner">
       <div class="container">
@@ -2353,6 +2358,10 @@
       </div>
     </section>
 
+    <!--------------------------------------- end  header  -------------------------------------->
+
+    <!--------------------------------------- start servises  -------------------------------------->
+
     <section class="servises">
       <h1>Servises I can help you with ?</h1>
       <p>
@@ -3957,6 +3966,120 @@
           </svg>
 
           <h2>server-side</h2>
+        </div>
+      </article>
+    </section>
+    <!--------------------------------------- end servises  -------------------------------------->
+
+    <!--------------------------------------- start project  -------------------------------------->
+
+    <section class="projects-container">
+      <h1></h1>
+      <article class="projects">
+        <div class="imgbox">
+          <span class="shadow"></span>
+          <img src="img/covid.png" alt="project" />
+          <div class="text-container">
+            <div class="text">
+              <h1>CovidTest</h1>
+              <span class="line"></span>
+
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nesciunt, commodi.
+              </p>
+
+              <button class="visit">
+                Visit
+                <span></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="imgbox">
+          <img src="img/days.png" alt="project" />
+          <div class="text-container">
+            <div class="text">
+              <h1>Days.</h1>
+              <span class="line"></span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nesciunt, commodi.
+              </p>
+              <button class="visit">
+                Visit
+                <span></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="imgbox">
+          <img src="img/youweb.png" alt="project" />
+          <div class="text-container">
+            <div class="text">
+              <h1>YouWeb</h1>
+              <span class="line"></span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nesciunt, commodi.
+              </p>
+              <button class="visit">
+                Visit
+                <span></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="imgbox">
+          <img src="img/color.png" alt="project" />
+          <div class="text-container">
+            <div class="text">
+              <h1>ColOor</h1>
+              <span class="line"></span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nesciunt, commodi.
+              </p>
+              <button class="visit">
+                Visit
+                <span></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="imgbox">
+          <img src="img/photoIn.png" alt="project" />
+          <div class="text-container">
+            <div class="text">
+              <h1>PhotoIn</h1>
+              <span class="line"></span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nesciunt, commodi.
+              </p>
+              <button class="visit">
+                Visit
+                <span></span>
+              </button>
+            </div>
+          </div>
+        </div>
+        <div class="imgbox">
+          <img src="img/beat.png" alt="project" />
+          <div class="text-container">
+            <div class="text">
+              <h1>BeatMaker</h1>
+              <span class="line"></span>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Nesciunt, commodi.
+              </p>
+              <button class="visit">
+                Visit
+                <span></span>
+              </button>
+            </div>
+          </div>
         </div>
       </article>
     </section>
