--- a/index.html
+++ b/index.html
@@ -3974,30 +3974,33 @@
     <!--------------------------------------- start project  -------------------------------------->
 
     <section class="projects-container">
-      <h1></h1>
-      <article class="projects">
-        <div class="imgbox">
-          <span class="shadow"></span>
-          <img src="img/covid.png" alt="project" />
+      <h1 class="projects_title">Here are some projects !</h1>
+
+      <p class="projects_para">
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut rerum,
+        sit excepturi ipsam nisi aliquid dicta?
+      </p>
+
+      <article class="slider">
+        <div class="slide activate">
           <div class="text-container">
             <div class="text">
               <h1>CovidTest</h1>
               <span class="line"></span>
-
               <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit.
                 Nesciunt, commodi.
               </p>
-
               <button class="visit">
                 Visit
                 <span></span>
               </button>
             </div>
           </div>
+          <div class="img_box"><img src="img/covid.svg" alt="" /></div>
         </div>
-        <div class="imgbox">
-          <img src="img/days.png" alt="project" />
+
+        <div class="slide">
           <div class="text-container">
             <div class="text">
               <h1>Days.</h1>
@@ -4012,9 +4015,10 @@
               </button>
             </div>
           </div>
+          <div class="img_box"><img src="img/days!.svg" alt="" /></div>
         </div>
-        <div class="imgbox">
-          <img src="img/youweb.png" alt="project" />
+
+        <div class="slide">
           <div class="text-container">
             <div class="text">
               <h1>YouWeb</h1>
@@ -4029,9 +4033,10 @@
               </button>
             </div>
           </div>
+          <div class="img_box"><img src="img/youweb.svg" alt="" /></div>
         </div>
-        <div class="imgbox">
-          <img src="img/color.png" alt="project" />
+
+        <div class="slide">
           <div class="text-container">
             <div class="text">
               <h1>ColOor</h1>
@@ -4046,43 +4051,16 @@
               </button>
             </div>
           </div>
-        </div>
-        <div class="imgbox">
-          <img src="img/photoIn.png" alt="project" />
-          <div class="text-container">
-            <div class="text">
-              <h1>PhotoIn</h1>
-              <span class="line"></span>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nesciunt, commodi.
-              </p>
-              <button class="visit">
-                Visit
-                <span></span>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="imgbox">
-          <img src="img/beat.png" alt="project" />
-          <div class="text-container">
-            <div class="text">
-              <h1>BeatMaker</h1>
-              <span class="line"></span>
-              <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nesciunt, commodi.
-              </p>
-              <button class="visit">
-                Visit
-                <span></span>
-              </button>
-            </div>
-          </div>
+          <div class="img_box"><img src="img/poto.svg" alt="" /></div>
         </div>
       </article>
+      <div class="controls">
+        <div class="prev"><</div>
+        <div class="next">></div>
+      </div>
     </section>
+
+    <div class="inducator"></div>
 
     <script src="js/script.js"></script>
   </body>
