--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+    <div class="preload"></div>
     <div id="cursor"></div>
     <div class="animate-box"></div>
     <div class="test">
