--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
               <il><a href="#footer" class="nav-link">Contacts</a></il>
             </ul>
           </div>
+          <div class="burger">
+            <i class="fas fa-bars"></i>
+          </div>
         </nav>
       </div>
     </header>
@@ -2375,8 +2378,8 @@
     <section class="servises">
       <h1>Servises I can help you with ?</h1>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut rerum,
-        sit excepturi ipsam nisi aliquid dicta?
+        when it comes to web development it's not just a service I offer, it's
+        more like an artwork that I can be creative and innovative.
       </p>
       <article class="servises__container">
         <div class="servise1">
@@ -3986,10 +3989,10 @@
     <section id="project" class="projects-container">
       <h1 class="projects_title">Here are some projects !</h1>
 
-      <p class="projects_para">
+      <!-- <p class="projects_para">
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut rerum,
         sit excepturi ipsam nisi aliquid dicta?
-      </p>
+      </p> -->
 
       <article class="slider">
         <div class="slide activate">
